
+ KGySoft.Drawing.DebuggerVisualizers.GdiPlus.dll
=================================================

+ KGySoft.Drawing.DebuggerVisualizers.GdiPlus namespace:
--------------------------------------------------------
+ GdiPlusDebuggerHelper class:
  + New GetDebuggerVisualizerProviders method (.NET Framework 4.7.2 only)
+ New ColorDebuggerVisualizerProviderImpl class (.NET Framework 4.7.2 only)

+ KGySoft.Drawing.DebuggerVisualizers.GdiPlus.Serialization namespace:
----------------------------------------------------------------------
+ The ColorSerializer class has been made public.


~~~~~~~~~
* v4.0.0:
~~~~~~~~~

* KGySoft.Drawing.ImagingTools.exe
==================================
- Zooming keeps the center of the currently visible rectangle
* Pixel Format/Quantizing/Dithering:
  + Improved configuration of parameters
  + New localizable tool tips for every parameter
  - Fixing quantizing CMYK images when no new pixel format is selected
* Resizing: Improved validation

+ API changes:
  + KGySoft.Drawing.ImagingTools.Model namespace:
    + CustomBitmapInfo class: New CustomPalette property
    + CustomPaletteInfo class: New EntryType property
    + CustomColorInfo class: New CustomColorComponents property

+ KGySoft.Drawing.DebuggerVisualizers.dll
=========================================
+ API changes:
  + KGySoft.Drawing.DebuggerVisualizers.Serialization namespace:
    + New CustomColorSerializationInfo class for serializing custom colors
    + New CustomPaletteSerializationInfo class for serializing custom palettes

* KGySoft.Drawing.DebuggerVisualizers.Wpf.dll
=============================================
* Better support of ScRGB and color profile-based colors.

+ KGySoft.Drawing.DebuggerVisualizers.SkiaSharp.dll
===================================================
+ New visualizer for SKPMColor type
+ New visualizer for SKColorF type

+ KGySoft.Drawing.DebuggerVisualizers.Core.dll
==============================================