@@ -1,3 +1,6 @@
 {
-  "DebuggerVisualizerProviders.GdiPlus.ColorDebuggerVisualizerProvider.Name": "KGy SOFT Color Debugger Visualizer"
+  "DebuggerVisualizerProviders.GdiPlus.ColorDebuggerVisualizerProvider.Name": "KGy SOFT Color Debugger Visualizer",
+  "DebuggerVisualizerProviders.GdiPlus.BitmapDebuggerVisualizerProvider.Name": "KGy SOFT Bitmap Debugger Visualizer",
+  "DebuggerVisualizerProviders.GdiPlus.MetafileDebuggerVisualizerProvider.Name": "KGy SOFT Metafile Debugger Visualizer",
+  "DebuggerVisualizerProviders.GdiPlus.ImageDebuggerVisualizerProvider.Name": "KGy SOFT Image Debugger Visualizer"
 }
